@@ -1,6 +1,7 @@
 - Fix parsing of vacation date-time with non-default date_format (#5372)
 - Fix regression where js error is thrown if server does not support 'duplicate' extension
 - Add option to automatically set vacation :from address (#5428)
+- Support per-host managesieve_conn_options (#5136)
 
 * version 8.7 [2016-07-19]
 -----------------------------------------------------------
